refactor(be): project 도메인 리팩토링 -v1 (#351)
* refactor(be): n+1 문제 해결(벌크 쿼리)

* refactor(be): N+1 문제 해결 - 마일스톤 이슈 카운트 벌크 쿼리 추가

- IssueRepository에 countByMilestoneIds, countByMilestoneIdsAndStatus 벌크 쿼리 메서드 추가
- ProjectService.getProjectMilestones에서 벌크 쿼리 사용하여 N+1 문제 해결
- 기존 N*2개의 쿼리를 2개의 쿼리로 최적화

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>

* refactor(be): 중복 쿼리 실행 제거

- IssueService.getMilestoneIssues에서 existsById + findById를 단일 findById로 통합
- IssueService에서 불필요한 milestoneRepository.existsById 호출 제거
- 데이터베이스 쿼리 횟수 감소로 성능 개선

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>

* refactor(be): Fetch 전략 최적화 - @BatchSize 추가

- ProjectEntity.milestoneEntityList에 @BatchSize(size = 10) 추가
- 여러 프로젝트의 마일스톤을 조회할 때 N+1 문제 방지
- 지연 로딩 시 배치 크기만큼 한 번에 로드하여 성능 개선

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>

* refactor(be): 중복된 알림 전송 및 권한 검사 로직 메서드 추출

- sendIssueAssignedNotificationIfNeeded 메서드 추출로 알림 전송 로직 공통화
- validateProjectParticipantOrAdmin 메서드 추출로 권한 검사 로직 공통화
- 빈 블록 및 불필요한 조건문 제거로 가독성 개선
- createIssue, updateIssue, deleteIssue에서 공통 메서드 사용

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>

* refactor(be): 1. 메서드 길이 과다 문제 해결
- IssueService.updateIssue 메서드를 여러 개의 작은 메서드로 분리
- ProjectService.getProjectsSummaryList 메서드를 논리적 단위로 분리
2. 매직 스트링 상수화
- ProjectConstants 클래스 생성
- 모든 하드코딩된 메시지 문자열을 상수로 교체
3. 타입 캐스팅 명시성 개선
- safeLongToInt() 메서드로 안전한 타입 변환
- calculateProgressPercentage() 메서드로 퍼센트 계산 로직 분리
4. 불필요한 요소 제거
- 사용하지 않는 import 제거
- 불필요한 주석 제거
5. 코드 최적화
- Stream API에서 collect(Collectors.toList())를 toList()로 변경 (Java 16+)
- 누락된 @Transactional 어노테이션 추가

* chore(be): 잘못된 파일명 수정

* refactor(be): GitHubSyncContext 객체 도입으로 메모리 누수 위험 감소

* refactor(be): 관심사 분리, 책임 분리

* refactor(be): instanceof 체인을 전략 패턴으로 개선

* fix(be): DTO 파일명 오타 수정 (